syntax = "proto3";

option java_multiple_files = true;
option java_package = "registerclientstubs";

package registerclientservice; // package do proto

service RegisterClientService{
  rpc getSvcServer(VoidRequest) returns (SvcServerAddress);
}

message SvcServerAddress{
  string ip = 1;
  int32 port = 2;
}

message VoidRequest{

}